Added PUT POST annotation
